SvcRoute/routes/mw-compress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: compress-mw
  namespace: traefik
spec:
  compress:
    excludedContentTypes:
      - text/event-stream
