SvcRoute/routes/blog.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-route-http
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`blog.memosa.cn`)
    kind: Rule
    middlewares:
    - name: redirect-https-mw
    services:
    - kind: Service
      name: blog-svc
      namespace: k3s-apps
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-route-https
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`blog.memosa.cn`)
    kind: Rule
    middlewares:
    - name: compress-mw
    services:
    - name: blog-svc
      namespace: k3s-apps
      port: 80
  tls:
    secretName: tls-memosa-cn
    options:
      name: tlsoption-memosa-cn
