SvcRoute/routes/grafana.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.memosa.cn`)
    kind: Rule
    middlewares:
    - name: redirect-https-mw
    services:
    - name: grafana-svc
      namespace: log-stack
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.memosa.cn`)
    kind: Rule
    services:
    - kind: Service
      name: grafana-svc
      namespace: log-stack
      port: 80
  tls:
    secretName: tls-memosa-cn
    options:
      name: tlsoption-memosa-cn
