SvcRoute/routes/headlamp.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-route-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kube.memosa.cn`)
    kind: Rule
    middlewares:
    - name: redirect-https-mw
    services:
    - name: headlamp-svc
      namespace: kube-system
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-route-https
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kube.memosa.cn`)
    kind: Rule
    services:
    - kind: Service
      name: headlamp-svc
      namespace: kube-system
      port: 80
  tls:
    secretName: tls-memosa-cn
