SvcRoute/routes/traefik.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.ops.memosa.cn`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService

  tls:
    secretName: tls-ops-memosa-cn
    options:
      name: tlsoption-memosa-cn
    # store:
    #   name: tlsstore-memosa-cn
